# bazel-python-cpp-example

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  pybind11.BUILD  python3.BUILD  test_binding.py
binding/: BUILD.bazel  binding.cpp
native/: BUILD.bazel  native.cc  native.h
